mise en forme, son et bouton rejouer

--- a/index.html
+++ b/index.html
@@ -2,12 +2,26 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <title>Challenge RPG</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Challenge-RPG</title>
   <link rel="stylesheet" href="css/style.css">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Bungee+Shade&family=Iceland&display=swap" rel="stylesheet"> 
 </head>
 <body>
-  <div id="board"></div>  
-
+  <header>
+    <h1>Atteins la croix en un minimum de mouvements</h1>
+    <form action="submit"></form>
+  </header>
+  <main>
+    <div id="instructions">
+      <h2>Instructions :</h2>
+      <p>Déplace le personnage en utilisant les <strong>flèches de ton clavier</strong></p>
+    </div>
+    <div id="board">
+      <audio src=""></audio>
+    </div>  
+  </main>
   <script src="js/app.js" charset="utf-8"></script>
 </body>
 </html>
